# personal_assistant

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  briefing.py  chat.py  health.py  memory.py  tools.py
backend/app/core/: __init__.py  auth.py  chat_service.py  config.py  location_state.py  logging.py  model_manager.py  ollama_client.py  safety.py  sessions.py
backend/app/memory/: embeddings.py  service.py  store.py  vector_store.py
backend/app/planner/: __init__.py  fast_intents.py  planner.py  schemas.py
backend/app/plugins/: __init__.py
backend/app/plugins/example_dice/: __init__.py  dice.py
backend/app/tools/: _common.py  base.py  briefing.py  calendar.py  clock.py  focus_mode.py  github.py  registry.py  timer.py
backend/app/tools/browser/: __init__.py  browser.py
backend/app/tools/clipboard/: clipboard.py
backend/app/tools/finder/: __init__.py  finder.py
backend/app/tools/git/: git.py
backend/app/tools/system/: __init__.py  system.py
backend/app/tools/terminal/: __init__.py  terminal.py
backend/app/tools/vision/: vision.py
backend/app/tools/vscode/: vscode.py
backend/app/vision/: qwen_vl.py
backend/tests/: conftest.py  test_api_briefing.py  test_auth.py  test_browser.py  test_chat.py  test_config.py  test_e2e.py  test_fast_intents.py  test_github.py  test_health.py  test_memory.py  test_model_manager.py  test_new_tools.py  test_planner.py  test_planner_integration.py  test_stdin_watchdog.py  test_tools_briefing.py  test_tools_finder.py  test_tools_git.py  test_tools_system.py  test_tools_terminal.py  test_vision.py  test_voice_api.py
docs/: API.md
docs/adr/: 0002-native-tool-calling.md
frontend/: README.md
frontend/JarvisApp/: Package.swift
frontend/JarvisApp/Sources/JarvisApp/: AppState.swift  JarvisApp.swift  LocationProvider.swift  VoiceAssistant.swift
frontend/JarvisApp/Sources/JarvisApp/Views/: ChatView.swift  MenuContentView.swift
frontend/JarvisApp/Sources/JarvisAppKit/: BackendClient.swift  BackendProcess.swift  Models.swift  ToolActivity.swift
frontend/JarvisApp/Sources/JarvisAppSelfTest/: main.swift
scripts/: install_models.sh  make_app.sh  setup.sh
