[project]
name = "jarvis-backend"
version = "0.2.0"
description = "Local-first AI desktop assistant backend for macOS."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "ollama>=0.4",
    "websockets>=13.1",
    "python-multipart>=0.0.12",
]

# Heavy dependencies land with the phase that needs them, so a fresh
# Phase 2 install stays small on 8GB hardware:
#   voice -> Phase 4, memory -> Phase 7, browser -> Phase 9, macos -> Phase 6
[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0",
    "openwakeword>=0.6",
    "onnxruntime>=1.18",
    "numpy>=1.26",
    "sounddevice>=0.5",
]
# Piper is kept separate: its wheels have historically been flaky on
# macOS arm64. Without it, TTS falls back to the built-in `say` command.
tts-piper = [
    "piper-tts>=1.2",
]
memory = [
    "chromadb>=0.5",
]
browser = [
    "playwright>=1.47",
]
macos = [
    "pyobjc-framework-Quartz>=10.3 ; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices>=10.3 ; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.3 ; sys_platform == 'darwin'",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
jarvis-backend = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
# ASYNC109: timeout parameters on our subprocess helpers are a deliberate API
ignore = ["ASYNC109"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: needs local models, network, or macOS services",
]

[[tool.mypy.overrides]]
module = ["faster_whisper.*", "openwakeword.*", "piper.*", "sounddevice.*", "websockets.*"]
ignore_missing_imports = true
